# SpeedVQA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  conftest.py  plan.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  run_tests.py  test_model_basic.py  test_model_factory.py
.cursor/: AGENTS.md
.cursor/rules/: 00-master-hub.mdc
.cursor/skills/: README.md
.cursor/workflows/: README.md
.github/workflows/: ci.yml
.hypothesis/constants/: 1c51384c6ef6a17d  247d1440ab692845  319adc65a645e2ed  372eafbe1fe6a6a4  471dbbde487cec0e  5f074a04148215fb  73869dcb2013db01  937bbb6d1cc707db  97cc6f31c30d373e  b233e417b6cfa8cc  b4f6b46afdb647d4  c34eb539c08c4b48  c6e0f6e725913fd0  c8fa020146504444  d6b67ccae822b597  dd24c3600053e5fa  f450ded1ecebf935  f59c3aff590c06e4
.hypothesis/examples/04e6b3400353b141/: 417d55e9776b5be3  69b06de3736da0f2  e0cc4f09373e3910
.kiro/: CLEANUP_NOTES.md
archive/: 20260330_233000_plan_Phase0与PhaseA冒烟完成归档.md
configs/: default.yaml
docs/: 01_设计.md  02_使用.md  02_开发.md  03_使用.md  03_思考思路.md  04_部署.md  PROJECT_OVERVIEW.md  README.md  RUNS_DIRECTORY.md  使用指南.md
examples/: hyperparameter_optimization_example.py  model_export_example.py  performance_benchmark_example.py
scripts/: onekey_clean.sh  onekey_export.py  onekey_export.sh  onekey_predict.py  onekey_predict.sh  onekey_train.py  onekey_train.sh
speedvqa/: __init__.py  pytest.ini
speedvqa/benchmark/: __init__.py  t4_benchmark.py
speedvqa/cli/: __init__.py  onekey_export.py  onekey_predict.py  onekey_train.py
speedvqa/configs/: abstract_binary_official_split_concat.yaml  abstract_binary_official_split_film.yaml  abstract_binary_val2017.yaml  abstract_binary_val2017_A5_short.yaml  abstract_binary_val2017_film.yaml  abstract_binary_val2017_film_A5_short.yaml  default.yaml  hyperopt_example.yaml  phase0_smoke.yaml  phase0_smoke_film.yaml  quick_subset_val2017_multiepoch.yaml
speedvqa/data/: __init__.py  datasets.py  transforms.py  validators.py
speedvqa/engine/: __init__.py  hyperparameter_optimizer.py  optimizers.py  trainer.py
speedvqa/examples/: __init__.py  bench_roi_inferencer_latency.py  dump_vqa_official_jsonl.py  hyperparameter_optimization_example.py  model_export_example.py  performance_benchmark_example.py  phase0_smoke_dataset.py
speedvqa/export/: README.md  __init__.py  exporter.py
speedvqa/inference/: README.md  __init__.py  inferencer.py  visualizer.py
speedvqa/models/: __init__.py  factory.py  speedvqa.py
speedvqa/monitoring/: __init__.py  performance_monitor.py
speedvqa/optimization/: __init__.py  tensorrt_optimizer.py
speedvqa/scripts/: __init__.py
speedvqa/tests/: __init__.py  conftest.py  run_tests.py  test_artifact_paths.py  test_data_validation.py  test_dataset_splitting.py  test_hyperparameter_optimization.py  test_model_basic.py  test_model_export.py  test_model_export_properties.py  test_model_factory.py  test_performance_benchmark_properties.py  test_performance_benchmarking.py  test_performance_evaluation.py  test_performance_monitor_properties.py  test_roi_inference_properties.py  test_roi_inferencer.py  test_roi_inferencer_simple.py  test_speedvqa_model.py  test_t4_performance.py  test_tensorrt_optimization_properties.py  test_training_monitoring.py
speedvqa/utils/: __init__.py  artifact_paths.py  config.py  metrics.py  training_logger.py
tests/: test_data_validation.py  test_dataset_splitting.py  test_hyperparameter_optimization.py  test_model_export.py  test_model_export_properties.py  test_performance_benchmark_properties.py  test_performance_benchmarking.py  test_performance_evaluation.py  test_performance_monitor_properties.py  test_roi_inferencer_simple.py  test_training_monitoring.py
(+7 files in other folders)
