[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "speedvqa"
version = "1.0.0"
description = "Lightweight binary VQA (ROI + text) with training, export, and inference"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
speedvqa-train = "speedvqa.cli.onekey_train:main"
speedvqa-predict = "speedvqa.cli.onekey_predict:main"
speedvqa-export = "speedvqa.cli.onekey_export:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["speedvqa*"]
# 发布 wheel 时不打包示例与测试；开发克隆仓库后仍可通过源码树使用二者
exclude = ["speedvqa.tests*", "speedvqa.examples*"]

[tool.setuptools.package-data]
speedvqa = ["configs/*.yaml"]

[tool.pytest.ini_options]
# 从仓库根目录运行 pytest；等价配置见 speedvqa/pytest.ini（在 speedvqa/ 下 pytest -c pytest.ini）
hypothesis_profile = "default"
testpaths = ["speedvqa/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-p", "no:warnings",
]
markers = [
    "slow: 标记为慢速测试",
    "integration: 标记为集成测试",
    "unit: 标记为单元测试",
    "property: 标记为属性测试",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 先聚焦未使用导入/变量、语法与 import 顺序；全量 W29* 空白规则噪声大，可由后续 ruff format 统一
select = [
    "E4",
    "E7",
    "E9",
    "F",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# 在调整 sys.path 之后再导入项目包
"speedvqa/examples/*.py" = ["E402"]
"speedvqa/tests/run_tests.py" = ["E402"]
"speedvqa/tests/test_model_basic.py" = ["E402"]
"speedvqa/tests/test_model_factory.py" = ["E402"]
